Fix java version usage